<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:background="#1D1D1D">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="12dp"
                android:src="@mipmap/icon_back_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/set_up"
                android:textColor="#F9EBF6"
                android:textSize="20sp"
                android:typeface="@{@string/font_bold}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="#1D1D1D"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:paddingStart="31dp"
                android:text="@string/set_up"
                android:textColor="#A796A8"
                android:textSize="16sp"
                android:typeface="@{@string/font_medium}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#2B292A"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:paddingStart="31dp"
                    android:text="@string/language"
                    android:textColor="#F9EBF6"
                    android:textSize="16sp"
                    android:typeface="@{@string/font_medium}" />

                <TextView
                    android:id="@+id/language_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="35dp"
                    android:paddingEnd="35dp"
                    android:text="@string/chinese"
                    android:textColor="#C7AD83"
                    android:textSize="16sp"
                    android:typeface="@{@string/font_medium}" />

                <ImageView
                    android:layout_width="1dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_vertical"
                    android:background="#CFC9D7" />

                <TextView
                    android:id="@+id/language_english"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:paddingStart="35dp"
                    android:paddingEnd="21dp"
                    android:text="@string/english"
                    android:textColor="#ffffff"
                    android:textSize="16sp"
                    android:typeface="@{@string/font_medium}" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_MyInformation"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#2B292A"
                android:gravity="center_vertical"
                android:paddingStart="31dp"
                android:text="@string/personal_data"
                android:textColor="#EBDDE9"
                android:paddingEnd="22dp"
                android:drawableEnd="@mipmap/icon_click_right"
                android:textSize="16sp"
                android:typeface="@{@string/font_medium}" />

            <TextView
                android:id="@+id/tv_about_us"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="18dp"
                android:background="#2B292A"
                android:gravity="center_vertical"
                android:paddingStart="31dp"
                android:paddingEnd="22dp"
                android:drawableEnd="@mipmap/icon_click_right"
                android:text="@string/on_us"
                android:textColor="#EBDDE9"
                android:textSize="16sp"
                android:typeface="@{@string/font_medium}" />

            <TextView
                android:id="@+id/tv_service"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#2B292A"
                android:gravity="center_vertical"
                android:paddingStart="31dp"
                android:text="@string/terms_of_service"
                android:textColor="#EBDDE9"
                android:paddingEnd="22dp"
                android:drawableEnd="@mipmap/icon_click_right"
                android:textSize="16sp"
                android:typeface="@{@string/font_medium}" />

            <TextView
                android:id="@+id/tv_privacy"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="#2B292A"
                android:gravity="center_vertical"
                android:paddingStart="31dp"
                android:text="@string/privacy_policy"
                android:paddingEnd="22dp"
                android:drawableEnd="@mipmap/icon_click_right"
                android:textColor="#EBDDE9"
                android:textSize="16sp"
                android:typeface="@{@string/font_medium}" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="#C8AD86"
            android:gravity="center"
            android:text="@string/go_out"
            android:textColor="#1D1D1D"
            android:textSize="17sp"
            android:typeface="@{@string/font_medium}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>