<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="3dp"
    android:layout_alignParentBottom="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#1F0426">

        <TextView
            android:id="@+id/tv_man"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/man"
            android:textColor="#EAB14E"
            android:textSize="17sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#986B3C" />

        <TextView
            android:id="@+id/tv_woman"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/woman"
            android:textColor="#EAB14E"
            android:textSize="17sp"
            android:textStyle="bold" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#986B3C" />
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/tv_cancel"
            android:textColor="#1F0426"
            android:textSize="17sp"
            android:textStyle="bold"
            android:background="#EAB14E"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>