<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_1D1D1D"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/tv_out"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@mipmap/bommon_nav_btn_close_n" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textColor="@color/c_ffffff"
                android:textSize="20sp"
                android:typeface="@{@string/font_bold}" />
        </RelativeLayout>
        <ImageView
            android:transitionName="logo"
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            app:srcCompat="@mipmap/login_logo" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <EditText
                android:id="@+id/et_mail"
                android:hint="@string/login_mail"
                android:textColorHint="#C8AD86"
                android:typeface="@{@string/font_bold}"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:singleLine="true"
                android:textColor="#C8AD86"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:id="@+id/lin"
            android:layout_width="253dp"
            android:layout_height="2dp"
            android:layout_gravity="end"
            android:layout_marginEnd="49dp"
            android:background="#C8AD86" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="68dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent">

            <EditText
                android:id="@+id/et_pwd"
                android:typeface="@{@string/font_bold}"
                android:inputType="textPassword"
                android:textColorHint="#C8AD86"
                android:hint="@string/login_pwd"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@null"
                android:singleLine="true"
                android:textColor="#C8AD86"
                android:textSize="17sp" />
        </LinearLayout>

        <View
            android:id="@+id/lin2"
            android:layout_width="253dp"
            android:layout_height="2dp"
            android:layout_gravity="end"
            android:layout_marginEnd="73dp"
            android:background="#C8AD86" />

        <RelativeLayout
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="28dp"
            android:layout_marginTop="42dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_btn_n" />

            <TextView
                android:typeface="@{@string/font_bold}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/mail_login"
                android:textColor="#262626"
                android:textSize="17sp" />
        </RelativeLayout>

        <RelativeLayout
            android:transitionName="register"
            android:id="@+id/ll_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="28dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_register_rb_n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:typeface="@{@string/font_medium}"
                android:text="@string/login_Apply"
                android:textColor="#343434"
                android:textSize="17sp" />
        </RelativeLayout>

        <LinearLayout
                android:orientation="vertical"
                android:gravity="bottom"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
                <TextView
                    android:typeface="@{@string/font_medium}"
                    android:textColor="#393632"
                    android:textSize="12sp"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/login_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:gravity="center_horizontal|bottom"
                    android:layout_marginBottom="28dp"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/tv_privacy_policy"
                        android:text="@string/privacy_policy"
                        android:textColor="#393632"
                        android:textSize="13sp"
                        android:typeface="@{@string/font_medium}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:textColor="#393632"
                        android:textSize="12sp"
                        android:typeface="@{@string/font_medium}"
                        android:gravity="bottom"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/login_as_well_as"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                <TextView
                    android:id="@+id/tv_terms_of_service"
                    android:text="@string/terms_of_service"
                    android:typeface="@{@string/font_medium}"
                    android:textColor="#393632"
                    android:textSize="13sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</layout>