<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#1D1D1D"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="23dp">
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C8AD86" />
            <TextView
                android:id="@+id/tv_man"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/man"
                android:textColor="#C8AD86"
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C8AD86" />
            <TextView
                android:id="@+id/tv_woman"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/woman"
                android:textColor="#C8AD86"
                android:textSize="17sp"
                android:textStyle="bold" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#C8AD86" />
            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:gravity="center"
                android:text="@string/tv_cancel"
                android:textColor="#1D1D1D"
                android:textSize="17sp"
                android:textStyle="bold"
                android:background="#C8AD86"/>
        </LinearLayout>

    </RelativeLayout>
</layout>