<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <!--<import type="android.view.View"/>-->
        <!--<variable-->
        <!--name="user"-->
        <!--type="mvp.model.entity.User"/>-->
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_1D1D1D"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/tv_out"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:src="@mipmap/bommon_nav_btn_close_n" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/login_title"
                android:textColor="@color/c_ffffff"
                android:textSize="20sp"
                android:typeface="@{@string/font_bold}" />
        </RelativeLayout>

        <ImageView
            android:transitionName="logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="38dp"
            android:src="@mipmap/rg_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_name" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="20"
                android:hint="@string/nick_name"
                android:text=""
                android:textColor="#C8AD86"
                android:textColorHint="#C8AD86"
                android:typeface="@{@string/font_bold}" />

        </LinearLayout>

        <View
            android:id="@+id/lin"
            android:layout_width="252dp"
            android:layout_height="2dp"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="9dp"
            android:background="#9B8668" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="33dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_sex" />

            <TextView
                android:id="@+id/tv_sex"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/sex"
                android:textColor="#C8AD86"
                android:textSize="17sp"
                android:typeface="@{@string/font_bold}" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_sanjiao" />
        </LinearLayout>

        <View
            android:id="@+id/lin2"
            android:layout_width="252dp"
            android:layout_height="2dp"
            android:layout_gravity="start"
            android:layout_marginStart="33dp"
            android:layout_marginTop="9dp"
            android:background="#9B8668" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="61dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:src="@mipmap/icon_email" />

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/e_mail"
                android:text=""
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="26"
                android:textColor="#C8AD86"
                android:textColorHint="#C8AD86"
                android:textSize="17sp"
                android:typeface="@{@string/font_bold}" />

        </LinearLayout>

        <View
            android:id="@+id/lin3"
            android:layout_width="252dp"
            android:layout_height="2dp"
            android:layout_gravity="start"
            android:layout_marginStart="61dp"
            android:layout_marginTop="9dp"
            android:background="#9B8668" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="91dp"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:paddingBottom="3dp"
                android:src="@mipmap/icon_password" />

            <EditText
                android:id="@+id/ed_pwd"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/pwd"
                android:text=""
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="16"
                android:textColor="#C8AD86"
                android:textColorHint="#C8AD86"
                android:inputType="textPassword"
                android:textSize="17sp"
                android:typeface="@{@string/font_bold}" />

        </LinearLayout>

        <View
            android:id="@+id/lin4"
            android:layout_width="252dp"
            android:layout_height="2dp"
            android:layout_gravity="start"
            android:layout_marginStart="91dp"
            android:layout_marginTop="9dp"
            android:background="#9B8668" />

        <RelativeLayout
            android:transitionName="register"
            android:id="@+id/ll_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="115dp"
            android:layout_marginTop="42dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_register_btn_n" />

            <TextView
                android:id="@+id/tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/application_account"
                android:typeface="@{@string/font_medium}"
                android:textColor="#272727"
                android:textSize="17sp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:typeface="@{@string/font_medium}"
                android:layout_gravity="center_horizontal"
                android:text="@string/login_tip"
                android:textColor="#4B4741"
                android:textSize="12sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:gravity="center_horizontal|bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_privacy_policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:typeface="@{@string/font_medium}"
                    android:text="@string/privacy_policy"
                    android:textColor="#4B4741"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:gravity="bottom"
                    android:text="@string/login_as_well_as"
                    android:typeface="@{@string/font_medium}"
                    android:textColor="#4B4741"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tv_terms_of_service"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_service"
                    android:typeface="@{@string/font_medium}"
                    android:textColor="#4B4741"
                    android:textSize="13sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>